--- a/BoardEditorJeopardy/BoardEditorJeopardy.csproj
+++ b/BoardEditorJeopardy/BoardEditorJeopardy.csproj
@@ -7,10 +7,17 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
+        <ApplicationIcon>jeopardy_icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\BoardJeopardy\BoardJeopardy.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Remove="jeopardy_icon.ico"/>
+        <Resource Include="font.ttf"/>
+        <Resource Include="jeopardy_icon.ico"/>
     </ItemGroup>
 
 </Project>
