--- a/PunktestandJeopardy/PunktestandJeopardy.csproj
+++ b/PunktestandJeopardy/PunktestandJeopardy.csproj
@@ -6,6 +6,21 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
+        <ApplicationIcon>jeopardy_icon.ico</ApplicationIcon>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Remove="jeopardy_icon.ico"/>
+        <Resource Include="font.ttf"/>
+        <Resource Include="jeopardy_icon.ico"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Page Update="QuestionWindow.xaml">
+            <Generator>MSBuild:Compile</Generator>
+            <XamlRuntime>Wpf</XamlRuntime>
+            <SubType>Designer</SubType>
+        </Page>
+    </ItemGroup>
 
 </Project>
