--- a/BoardEditorJeopardy/BoardEditorJeopardy.csproj
+++ b/BoardEditorJeopardy/BoardEditorJeopardy.csproj
@@ -7,7 +7,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
-        <ApplicationIcon>jeopardy_icon.ico</ApplicationIcon>
+        <ApplicationIcon>Resources\jeopardy_icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,8 +16,8 @@
 
     <ItemGroup>
         <None Remove="jeopardy_icon.ico"/>
-        <Resource Include="font.ttf"/>
-        <Resource Include="jeopardy_icon.ico"/>
+        <Resource Include="Resources\font.ttf" />
+        <Resource Include="Resources\jeopardy_icon.ico" />
     </ItemGroup>
 
 </Project>
