--- a/BoardJeopardy/BoardJeopardy.csproj
+++ b/BoardJeopardy/BoardJeopardy.csproj
@@ -21,4 +21,8 @@
         <Resource Include="jeopardy_icon.ico"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NAudio" Version="2.2.1" />
+    </ItemGroup>
+
 </Project>
