--- a/PunktestandJeopardy/PunktestandJeopardy.csproj
+++ b/PunktestandJeopardy/PunktestandJeopardy.csproj
@@ -23,4 +23,9 @@
         </Page>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NAudio" Version="2.2.1" />
+      <PackageReference Include="NAudio.Core" Version="2.2.1" />
+    </ItemGroup>
+
 </Project>
